--- a/PlanIT-backend/src/main/resources/application.properties
+++ b/PlanIT-backend/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.hibernate.ddl-auto = validate
 
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
-#server.servlet.context-path=/api
+server.servlet.context-path=/api
